--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -2,3 +2,7 @@ baseURL = "http://example.com/"
 languageCode = "zh-cn"
 theme = "Cocodayo"
 title = "Cocodayo"
+
+contentDir = "exampleSite/content"
+staticDir = "exampleSite/static"
+themesDir = ".."
