feat(posts): add post meta info & summary in post list

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -19,7 +19,7 @@ menu:
     weight: 2
   - identifier: category
     name: Category
-    url: /category/
+    url: /categories/
     weight: 3
   - identifier: tag
     name: Tag
