--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -41,3 +41,17 @@ title = "ExampleSite"
 
 [params]
   footer_slogan = "他们正热烈地讨论着别人的秘密，但是，一个不说，一个不听，还有一个不看。"
+  avatar_url = "https://i.loli.net/2019/07/28/5d3d4b6b925be18865.jpg"
+  index_slogan = "这个世界没那么好，但似乎也没那么糟。"
+
+[[params.social_link]]
+  name = "github"
+  url = "https://github.com/creedowl"
+  icon = "https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg"
+  color = "#181717"
+
+[[params.social_link]]
+  name = "twitter"
+  url = "https://twitter.com/creedowl_"
+  icon = "https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg"
+  color = "#1DA1F2"
