chore(exampleSite): add author name, site description and keywords in config file

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -12,6 +12,9 @@ paginate = 10
 theme = "Cocodayo"
 title = "ExampleSite"
 
+[author]
+name = "Cocodayo"
+
 # site navigation bar
 [[menu.main]]
   identifier = "posts"
@@ -43,6 +46,8 @@ title = "ExampleSite"
   footer_slogan = "<b>他们正热烈地讨论着别人的秘密，但是，一个不说，一个不听，还有一个不看。</b>"
   avatar_url = "https://i.loli.net/2019/07/28/5d3d4b6b925be18865.jpg"
   index_slogan = "<h1 style=\"color: pink;\">这个世界没那么好，但似乎也没那么糟。</h1>"
+  description = "example site of hugo blog using theme Cocodayo"
+  keywords = ["hugo", "theme", "Cocodayo"]
 
 [[params.social_link]]
   name = "github"
