feat: better index page design

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -38,21 +38,30 @@ name = "<author>"
   weight = 4
 
 [params]
-  enable_mathjax = true
-  footer_slogan = "<b>他们正热烈地讨论着别人的秘密，但是，一个不说，一个不听，还有一个不看。</b>"
-  avatar_url = "https://i.loli.net/2019/07/28/5d3d4b6b925be18865.jpg"
-  index_slogan = "<h1 style=\"color: pink;\">这个世界没那么好，但似乎也没那么糟。</h1>"
+  avatar_round = true
+  avatar_url = "https://i.loli.net/2020/02/26/yne2OuofTMS9CWD.png"
   description = "example site of hugo blog using theme Verse"
+  enable_mathjax = true
+  footnote = ""
   keywords = ["hugo", "theme", "Verse"]
+  slogan = "<b>Cogito, ergo sum</b>"
+
+[[params.social_link]]
+  name = "gmail"
+  url = "https://gmail.com"
+  icon = "https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/gmail.svg"
 
 [[params.social_link]]
   name = "github"
-  url = "https://github.com/creedowl"
+  url = "https://github.com/"
   icon = "https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/github.svg"
-  color = "#181717"
+
+[[params.social_link]]
+  name = "telegram"
+  url = "https://telegram.org/"
+  icon = "https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/telegram.svg"
 
 [[params.social_link]]
   name = "twitter"
-  url = "https://twitter.com/creedowl_"
+  url = "https://twitter.com/"
   icon = "https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitter.svg"
-  color = "#1DA1F2"
