--- a/theme.toml
+++ b/theme.toml
@@ -1,14 +1,14 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Verse"
+name = "TeXify"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = "https://github.com/queensferryme/hugo-theme-texify/blob/master/LICENSE"
 description = ""
-homepage = "http://example.com/"
+homepage = "https://github.com/queensferryme/hugo-theme-texify/"
 tags = []
 features = []
-min_version = "0.41"
+min_version = "0.60"
 
 [author]
   name = ""
