--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "TeXify"
 license = "MIT"
 licenselink = "https://github.com/queensferryme/hugo-theme-texify/blob/master/LICENSE"
-description = ""
+description = "A minimal, latex-style hugo theme for personal blogging"
 homepage = "https://github.com/queensferryme/hugo-theme-texify/"
-tags = []
-features = []
+tags = ["blog", "clean", "latex", "light", "minimal", "responsive", "simple"]
+features = ["blog"]
 min_version = "0.60"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Queensferry"
+  homepage = "https://github.com/queensferryme/"
