feat: introduce option for full text rss

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -38,6 +38,7 @@ name = "author"
 [params]
   custom_css = []
   description = "an example site for hugo theme TeXify"
+  enableFullRSS = true
   enable_mathjax = true
   footnote = "Follow me on <a class=link href=https://github.com/queensferryme>GitHub</a>, <a class=link href=https://twitter.com/queensferryme>Twitter</a> or <a class=link href=/index.xml>RSS</a> | <a class=link href=https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh target=_blank rel=noopener>CC BY-NC-SA 4.0</a>"
   keywords = ["hugo", "latex", "theme"]
