chore: use camel-case config params

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -36,9 +36,9 @@ name = "author"
   weight = 3
 
 [params]
-  custom_css = []
+  customCSS = []
   description = "an example site for hugo theme TeXify"
   enableFullRSS = true
-  enable_mathjax = true
+  enableMathjax = true
   footnote = "Follow me on <a class=link href=https://github.com/queensferryme>GitHub</a>, <a class=link href=https://twitter.com/queensferryme>Twitter</a> or <a class=link href=/index.xml>RSS</a> | <a class=link href=https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh target=_blank rel=noopener>CC BY-NC-SA 4.0</a>"
   keywords = ["hugo", "latex", "theme"]
