--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -40,5 +40,6 @@ name = "author"
   description = "an example site for hugo theme TeXify"
   enableFullRSS = true
   enableMathjax = true
+  favicon = "/favicon.ico"
   footnote = "Follow me on <a class=link href=https://github.com/queensferryme>GitHub</a>, <a class=link href=https://twitter.com/queensferryme>Twitter</a> or <a class=link href=/index.xml>RSS</a> | <a class=link href=https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh target=_blank rel=noopener>CC BY-NC-SA 4.0</a>"
   keywords = ["hugo", "latex", "theme"]
