chore: use domain `texify.qufy.me`

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hugo-theme-texify.qufy.me"
+baseURL = "https://texify.qufy.me"
 defaultContentLanguage = "en"
 hasCJKLanguage = true
 languageCode = "en"
