--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ minifyOutput = false # output asset minimization
 
 [params]
 description = "an example site for hugo theme TeXify" # website description
-favicon = "/favicon.ico" # path to website icon
+favicon = "favicon.ico" # path to website icon, relative to ./static
 footnote = """
 Follow me on <a class=link href=https://github.com/queensferryme>GitHub</a>,
 <a class=link href=https://twitter.com/queensferryme>Twitter</a> or
@@ -63,8 +63,8 @@ Follow me on <a class=link href=https://github.com/queensferryme>GitHub</a>,
 """ # notes in the website footer
 keywords = ["hugo", "latex", "theme"] # website keywords
 
-customCSS = []            # path to custom css files, relative to './static/css/'
-customJS = []             # path to custom js files, relative to './static/js/'
+customCSS = []            # path to custom css files, relative to ./static
+customJS = []             # path to custom js files, relative to ./static
 dateFormat = "2006-01-02" # date format, see https://gohugo.io/functions/format/
 enableFullRSS = true      # rss full-text output
 enableHanEmph = true      # use dots to emphasize chinese texts, see https://zh.wikipedia.org/wiki/%E7%9D%80%E9%87%8D%E5%8F%B7
