--- a/config.toml
+++ b/config.toml
@@ -66,8 +66,8 @@ keywords = ["hugo", "latex", "theme"] # website keywords
 customCSS = []            # path to custom css files, relative to ./static
 customJS = []             # path to custom js files, relative to ./static
 dateFormat = "2006-01-02" # date format, see https://gohugo.io/functions/format/
-enableFullRSS = true      # rss full-text output
-enableHanEmph = true      # use dots to emphasize chinese texts, see https://zh.wikipedia.org/wiki/%E7%9D%80%E9%87%8D%E5%8F%B7
+fullTextRSS = true        # output full-text (instead of only summary) rss
+emphasisWithDots = true   # use dots to emphasize chinese texts, see https://zh.wikipedia.org/wiki/%E7%9D%80%E9%87%8D%E5%8F%B7
 since = "2019"            # website created year
 toc = false               # whether to enable table of contents in posts
 
