fix: typo in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ###################################################
-# BUILT-IN CONFIGURATION OPTOINS                  #
+# BUILT-IN CONFIGURATION OPTIONS                  #
 # https://gohugo.io/getting-started/configuration #
 ###################################################
 
