change domain name

--- a/config.toml
+++ b/config.toml
@@ -3,17 +3,17 @@
 # https://gohugo.io/getting-started/configuration #
 ###################################################
 
-baseURL = "https://texify.qufy.me" # website root path
-disqusShortname = ""               # disqus shortcode
-enableGitInfo = false              # retrieve last modified date from git commits
-enableRobotsTXT = true             # /robots.txt
-googleAnalytics = ""               # google analytics id
-hasCJKLanguage = true              # Chinese/Japanese/Korean
-languageCode = "en"                # content language
-paginate = 5                       # number of posts each page
-rssLimit = 10                      # maximum items in rss feeds
-theme = "hugo-theme-texify"        # theme directory name
-title = "TeXify"                   # website title
+baseURL = "https://texify.queensferry.me" # website root path
+disqusShortname = ""                      # disqus shortcode
+enableGitInfo = false                     # retrieve last modified date from git commits
+enableRobotsTXT = true                    # /robots.txt
+googleAnalytics = ""                      # google analytics id
+hasCJKLanguage = true                     # Chinese/Japanese/Korean
+languageCode = "en"                       # content language
+paginate = 5                              # number of posts each page
+rssLimit = 10                             # maximum items in rss feeds
+theme = "hugo-theme-texify"               # theme directory name
+title = "TeXify"                          # website title
 
 [author]
 email = "me@example.com" # your email
@@ -28,7 +28,7 @@ unsafe = true # enable html in markdown
 style = "emacs" # syntax highlight style, see https://xyproto.github.io/splash/docs/
 
 # https://gohugo.io/content-management/menus/
-[[menu.main]] # sections in the website header
+[[menu.main]]
 identifier = "post" # section id
 name = "Post"       # section display title
 url = "/"           # path to the section
